2009-04-21  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/worker/checks/gst010.py:
	Force using the video pad of dvdemux when cheking firewire
	capabilities in the worker check.
	Fixes #1274

2009-04-20  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/test/test_component_playlist.py:
	Fix tests.

2009-04-20  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/producers/playlist/playlist.py:
	Remove unused imports.
	Set filtercaps on gnlsource.
	Move identity sync=true before identity single-segment=true.
	Hack to expose feeder template.
	* flumotion/component/producers/playlist/playlistparser.py:
	position used is in terms of clock time, not in terms of
	running time
	* flumotion/component/producers/playlist/singledecodebin.py:
	Update to later version.

2009-04-16  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/bouncers/bouncer.py:
	Rename on_validation to on_validate for real.

2009-04-16  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/bouncers/bouncer.py:
	Removed a debug print, rename on_validation to on_validate
	and added a comment on returning keycard with state REFUSED
	when using authetication session.
	* flumotion/test/test_component_bouncers_bouncer_authsession.py:
	Use failIf and failUnless insteed of assertFalse and assertTrue.

2009-04-16  Sebastien Merle  <sebastien@fluendo.com>

	reviewed by: Arek, Zaheer

	* flumotion/component/bouncers/bouncer.py:
	* flumotion/test/Makefile.am:
	* flumotion/test/test_component_bouncers_bouncer_authsession.py:
	* flumotion/test/test_component_bouncers_bouncer_authsession.py
	  (added):
	Added a helper bouncer for authentication sessions
	like challenge/response. It provide a way to store and retrieve
	data related to the session, and validate/cancel sessions.

2009-04-16  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/admin/command/main.py: