@@ -1,3 +1,12 @@
+2009-04-21  Jan Urbanski  <jurbanski@flumotion.com>
+
+	* flumotion/component/converters/overlay/overlay.py:
+	Change the warning text, gst-plugins-good are still buggy.
+
+	* flumotion/component/producers/looper/looper.py:
+	Remove warnings about segfault-causing version of gst-python for
+	versions that no longer have the buggy behaviour.
+
 2009-04-21  Xavier Queralt Mateu  <xqueralt@flumotion.com>
 
 	* flumotion/worker/checks/gst010.py:
